# ros_openalpr

./: CMakeLists.txt  README.md  package.xml
msg/: PlateCandidate.msg  PlateResult.msg  PlatesResults.msg
src/: ros_openalpr_node.cpp
